# xbit_flasher-xbox

./: .clang-format  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  main.cpp  xbit.h
.github/workflows/: ci.yml  codeql.yml
hookDll/: hook.c  hook.h  main.c  main.h
udev/: 99-xbit-flasher.rules
